# DIDA

./: .gitignore  Cargo.toml  Makefile  README.md  修改意见.md  实施计划.md
Plan/: 架构设计白皮书：基于 rDNS 与区块链链的轻量级双重身份认证系统.md
Plan/moduls/: 1.身份验证网关.md  2.区块链子系统.md  3.反向DNS基础设施.md  4.实验环境与流量编排.md
bpf/: Makefile  xdp_whitelist.c
config/: contract.env.example  named.conf.local  rdns.zone  trust_anchor.env.example  whitelist.env.example
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: IPCertRegistry.sol
contracts/test/: IPCertRegistry.t.sol
scripts/: analyze_pcap.py  benchmark_rpc.py  bulk_generate_certs.py  bulk_generate_simple.py  check_tools.sh  cleanup.sh  contract_client.py  create_test_manifest.py  deep_diagnose_bind9.sh  diagnose_bind9.sh  exp1_latency_test.py  exp4_ablation.py  fix_bind9_ipv4.sh  gen_zone.py  plot_all.py  provision_certs.py  provision_certs_simple.py  register_test_certs.sh  setup.sh  setup_netem.sh  setup_nfq_port_whitelist.sh  verify.sh
scripts/keygen/: generate_keys.py
src/: cache.rs  error.rs  inflight.rs  lib.rs  main.rs  nfq.rs  state.rs  telemetry.rs  whitelist.rs  ws_listener.rs  xdp.rs
src/pipeline/: chain.rs  crypto.rs  dns.rs  mod.rs  verdict.rs
tests/: integration_test.rs
