[package]
name = "rust-rdns"
version = "0.1.0"
edition = "2021"
authors = ["DIDA Research Team"]

[dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full", "rt-multi-thread"] }

# Netfilter queue for packet interception
nfq = "0.2"

# Async DNS resolver (formerly trust-dns)
hickory-resolver = "0.24"

# Ethereum RPC + WebSocket
alloy = { version = "0.3", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# secp256k1 ECDSA for signature verification
k256 = { version = "0.13", features = ["ecdsa"] }

# High-performance concurrent cache
moka = { version = "0.12", features = ["future"] }

# IP prefix CIDR operations
ipnet = "2.9"

# Singleton pattern for global whitelist
once_cell = "1.19"

# Error handling
eyre = "0.6"
color-eyre = "0.6"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
hex = "0.4"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Time handling
chrono = "0.4"

# Async traits
async-trait = "0.1"
pnet = { version = "0.35.0", features = ["std"] }
thiserror = "2.0.18"
csv = "1.4.0"

# XDP/eBPF support
aya = { version = "0.11", optional = true, features = ["tokio"] }
libbpf-rs = { version = "0.21", optional = true }
memmap2 = { version = "0.9", optional = true }

[features]
xdp = ["dep:aya", "dep:libbpf-rs", "dep:memmap2"]

[dev-dependencies]
criterion = "0.5"

[lib]
name = "rust_rdns"
path = "src/lib.rs"

[[bin]]
name = "auth-gateway"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
